--- a/templates/bio.html
+++ b/templates/bio.html
@@ -10,10 +10,12 @@
     </header>
     <main>
         <div id="bio-photo">
-            <img src="static/img/square-top-lakes.jpg"/>
+            <img src="/static/img/square-top-lakes.jpg"/>
         </div>
         <div id="biography">
-            Biography!
+            <p>
+                Bio coming soon!                
+            </p>
         </div>
     </main>
 {% endblock %}
