--- a/templates/bio.html
+++ b/templates/bio.html
@@ -14,7 +14,7 @@
         </div>
         <div id="biography">
             <p>
-                Bio coming soon!                
+                Coming soon!                
             </p>
         </div>
     </main>
