--- a/templates/bio.html
+++ b/templates/bio.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block header %}
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto:400,700" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
@@ -14,6 +14,9 @@
         </div>
         <div id="biography">
             <p>
+                Bio...
+            </p>
+            <!-- <p>
                 I’ve been obsessed with learning for as long as I can remember. That’s what I love about development—you never stop learning.
             </p>
             <p>
@@ -33,7 +36,7 @@
             </p>
             <p>
                 I’m excited to continue growing as a developer. I am currently looking for employment, and am open to part-time, full-time, and freelance positions. Please don’t hesitate to contact me!
-            </p>
+            </p> -->
         </div>
     </main>
 {% endblock %}
